Just added some more stuff

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 <body>
     <div class="app">
         <div class="navbar-outter">
+            <div class="logo">
+                <h1>
+                    SauravDutt<span class="small-text">.com</span>
+                </h1>
+            </div>
+            <div class="background-illustration">
 
+            </div>
+            <div class="status">
+
+            </div>
         </div>
         <div class="banner">
 
