Just added some more stuff

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="app">
+    
         <div class="navbar-outter">
             <div class="logo">
                 <h1>
@@ -20,7 +20,16 @@
 
             </div>
         </div>
-    </div>
+        <div class="app">
+            <div>
+                <p>
+                    Frankula : <span class="logo-small">"Connect your Metamask Wallet, or Signin, to Begin." </span>
+                </p><br>
+                <a href="#" class="signin-btn">Sign in</a>
+            </div>
+            <img src="./res/img/about.png" alt="Frankula" class="frankula">
+            
+        </div>
         <div class="banner">
 
         </div>
