Just added some more stuff

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         </div>
             <div class="banner" id="bannerContainer">
-                <!-- This part is coming dynamically -->
+                <!-- This part is coming dynamically Cards on the right -->
             </div>
             <div class="crud-outter" id="crudApplication">
     
