Just added some more stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/7e26a7c171.js" crossorigin="anonymous"></script>
-    <title>Saurav Dutt | Home</title>
+    <title>Gallery | Home</title>
     <link rel="shortcut icon" href="./res/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,7 +15,7 @@
             <div class="navbar-outter">
                 <div class="logo">
                     <h1>
-                        SauravDutt<span class="small-text">.com</span>
+                        Gallery<span class="small-text">.sauravDutt.com</span>
                     </h1>
                 </div>
                 <div class="status">
