Just added some more stuff

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="navbar-outter">
                 <div class="logo">
                     <h1>
-                        Gallery<span class="small-text">.sauravDutt.com</span>
+                        Gallery<span class="small-text"><a href="https://sauravdutt.com/" target="_blank" style="text-decoration: none;">.sauravDutt.com</a></span>
                     </h1>
                 </div>
                 <div class="status">
